@@ -3,6 +3,7 @@ From ucommon 1.3.3 to 1.4.0
 - added mapped (shared memory) to ucommon library
 - improved mingw32 support
 - support for gcc < 3.0 (gcc 2.96 rhel-2.1 for example)
+- socket initialization for msw.
 
 From ucommon 1.3.2 to 1.3.3
 - initialization of socket hinting for BSD stack.
